--- a/views/pages/blogPostForm.pug
+++ b/views/pages/blogPostForm.pug
@@ -102,4 +102,4 @@ block page
                 h2.blog-post-form-page__heading Preview
                 
             .blog-post-form-page__body
-                +blogPostFragment(blogPost)
+                +blogPostFragment(blogPost, false)
