--- a/public/stylesheets/views/pages/_blog-post-form.scss
+++ b/public/stylesheets/views/pages/_blog-post-form.scss
@@ -51,6 +51,8 @@
     }
 
     &__body {
+        display: flex;
+        flex-direction: column;
         height: 100%;
         width: 100%;
         padding: 1rem;
@@ -59,6 +61,10 @@
 
     &__right > &__body {
         overflow: auto;
+    }
+
+    &__tab-container {
+        height: 100%;
     }
 
     &.-draft-view {
@@ -91,6 +97,7 @@
     width: 100%;
     border-top: 2px solid colors.$bg2;
     padding-top: 1rem;
+    padding-bottom: 2rem;
 
     &__metadata {
         display: flex;
@@ -101,10 +108,14 @@
 
     &__content {
         height: 100%;
+
+        .form-textarea {
+            height: 100%;
+        }
     }
 }
 
-.tinymce-app, .tox.tox-tinymce {
+.tox-tinymce {
     min-height: 100%;
 }
 
