--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,24 +1,23 @@
-:root {
-  --bp0: 480px;
-  --bp1: 768px;
-  --bp2: 1024px;
-  --bp3: 1200px;
-}
-
-/* PrismJS 1.29.0
-https://prismjs.com/download.html#themes=prism-twilight&languages=markup+css+clike+javascript+markup-templating */
-code[class*=language-], pre[class*=language-] {
-  color: #fff;
-  background: 0 0;
+/**
+* MIT License
+* Copyright (c) 2021 Ayush Saini
+* Holi Theme for prism.js
+* @author Ayush Saini <@AyushCodes on Twitter>
+*/
+code[class*=language-],
+pre[class*=language-] {
+  color: #d6e7ff;
+  background: #030314;
+  text-shadow: none;
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
   font-size: 1em;
-  text-align: left;
-  text-shadow: 0 -0.1em 0.2em #000;
+  line-height: 1.5;
+  letter-spacing: 0.2px;
   white-space: pre;
   word-spacing: normal;
   word-break: normal;
   word-wrap: normal;
-  line-height: 1.5;
+  text-align: left;
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
@@ -28,110 +27,99 @@ code[class*=language-], pre[class*=language-] {
   hyphens: none;
 }
 
-:not(pre) > code[class*=language-], pre[class*=language-] {
-  background: #141414;
+pre[class*=language-]::-moz-selection,
+pre[class*=language-] ::-moz-selection,
+code[class*=language-]::-moz-selection,
+code[class*=language-] ::-moz-selection,
+pre[class*=language-]::selection,
+pre[class*=language-] ::selection,
+code[class*=language-]::selection,
+code[class*=language-] ::selection {
+  color: inherit;
+  background: #1d3b54;
+  text-shadow: none;
 }
 
 pre[class*=language-] {
-  border-radius: 0.5em;
-  border: 0.3em solid #545454;
-  box-shadow: 1px 1px 0.5em #000 inset;
-  margin: 0.5em 0;
+  border: 1px solid #2a4555;
+  border-radius: 5px;
+  padding: 1.5em 1em;
+  margin: 1em 0;
   overflow: auto;
-  padding: 1em;
-}
-
-pre[class*=language-]::-moz-selection {
-  background: #27292a;
-}
-
-pre[class*=language-]::selection {
-  background: #27292a;
-}
-
-code[class*=language-] ::-moz-selection, code[class*=language-]::-moz-selection, pre[class*=language-] ::-moz-selection, pre[class*=language-]::-moz-selection {
-  text-shadow: none;
-  background: hsla(0, 0%, 93%, 0.15);
-}
-
-code[class*=language-] ::selection, code[class*=language-]::selection, pre[class*=language-] ::selection, pre[class*=language-]::selection {
-  text-shadow: none;
-  background: hsla(0, 0%, 93%, 0.15);
 }
 
 :not(pre) > code[class*=language-] {
-  border-radius: 0.3em;
-  border: 0.13em solid #545454;
-  box-shadow: 1px 1px 0.3em -0.1em #000 inset;
-  padding: 0.15em 0.2em 0.05em;
-  white-space: normal;
+  color: #f0f6f6;
+  background: #2a4555;
+  padding: 0.2em 0.3em;
+  border-radius: 0.2em;
+  box-decoration-break: clone;
 }
 
-.token.cdata, .token.comment, .token.doctype, .token.prolog {
-  color: #777;
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: #446e69;
 }
 
 .token.punctuation {
-  opacity: 0.7;
+  color: #d6b007;
 }
 
-.token.namespace {
-  opacity: 0.7;
+.token.property,
+.token.tag,
+.token.boolean,
+.token.number,
+.token.constant,
+.token.symbol,
+.token.deleted {
+  color: #d6e7ff;
 }
 
-.token.boolean, .token.deleted, .token.number, .token.tag {
-  color: #ce6849;
+.token.selector,
+.token.attr-name,
+.token.builtin,
+.token.inserted {
+  color: #e60067;
 }
 
-.token.builtin, .token.constant, .token.keyword, .token.property, .token.selector, .token.symbol {
-  color: #f9ed99;
+.token.string,
+.token.char {
+  color: #49c6ec;
 }
 
-.language-css .token.string, .style .token.string, .token.attr-name, .token.attr-value, .token.char, .token.entity, .token.inserted, .token.operator, .token.string, .token.url, .token.variable {
-  color: #909e6a;
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string {
+  color: #ec8e01;
+  background: transparent;
 }
 
-.token.atrule {
-  color: #7385a5;
+.token.atrule,
+.token.attr-value,
+.token.keyword {
+  color: #0fe468;
 }
 
-.token.important, .token.regex {
-  color: #e8c062;
+.token.function,
+.token.class-name {
+  color: #78f3e9;
 }
 
-.token.bold, .token.important {
-  font-weight: 700;
+.token.regex,
+.token.important,
+.token.variable {
+  color: #d6e7ff;
 }
 
-.token.italic {
-  font-style: italic;
-}
-
-.token.entity {
-  cursor: help;
-}
-
-.language-markup .token.attr-name, .language-markup .token.punctuation, .language-markup .token.tag {
-  color: #ac885c;
-}
-
-.token {
-  position: relative;
-  z-index: 1;
-}
-
-.line-highlight.line-highlight {
-  background: hsla(0, 0%, 33%, 0.25);
-  background: linear-gradient(to right, hsla(0, 0%, 33%, 0.1) 70%, hsla(0, 0%, 33%, 0));
-  border-bottom: 1px dashed #545454;
-  border-top: 1px dashed #545454;
-  margin-top: 0.75em;
-  z-index: 0;
-}
-
-.line-highlight.line-highlight:before, .line-highlight.line-highlight[data-end]:after {
-  background-color: #8693a6;
-  color: #f4f1ef;
+:root {
+  --bp0: 480px;
+  --bp1: 768px;
+  --bp2: 1024px;
+  --bp3: 1200px;
 }
 
 .blog-post-card__article {
@@ -835,6 +823,8 @@ code[class*=language-] ::selection, code[class*=language-]::selection, pre[class
   transform: rotate(90deg);
 }
 .blog-post-form-page__body {
+  display: flex;
+  flex-direction: column;
   height: 100%;
   width: 100%;
   padding: 1rem;
@@ -842,6 +832,9 @@ code[class*=language-] ::selection, code[class*=language-]::selection, pre[class
 }
 .blog-post-form-page__right > .blog-post-form-page__body {
   overflow: auto;
+}
+.blog-post-form-page__tab-container {
+  height: 100%;
 }
 .blog-post-form-page.-draft-view .blog-post-form-page__left {
   display: flex;
@@ -861,6 +854,7 @@ code[class*=language-] ::selection, code[class*=language-]::selection, pre[class
   width: 100%;
   border-top: 2px solid rgb(36, 36, 36);
   padding-top: 1rem;
+  padding-bottom: 2rem;
 }
 .blog-post-form__metadata {
   display: flex;
@@ -871,8 +865,11 @@ code[class*=language-] ::selection, code[class*=language-]::selection, pre[class
 .blog-post-form__content {
   height: 100%;
 }
+.blog-post-form__content .form-textarea {
+  height: 100%;
+}
 
-.tinymce-app, .tox.tox-tinymce {
+.tox-tinymce {
   min-height: 100%;
 }
 
@@ -1395,10 +1392,10 @@ ul, ol {
   margin: 0;
 }
 
-pre:has(> code).language-markup {
+code[class*=language-],
+pre[class*=language-] {
   padding: 1rem;
   white-space: pre-wrap;
-  background-color: black;
 }
 
 .-hidden {
