Refactor: Added &.-smaller declaration to blog-post-card

--- a/public/stylesheets/views/components/card/blogPostCard/_blog-post-card.scss
+++ b/public/stylesheets/views/components/card/blogPostCard/_blog-post-card.scss
@@ -75,6 +75,10 @@
     &.-small {
         @include mod.small();
     }
+
+    &.-smaller {
+        @include mod.smaller();
+    }
 }
 
 @media (max-width: bp.$bp0) {
