Fix: List styles did not appear for blog post content

--- a/public/stylesheets/views/components/fragment/_blog-post-fragment.scss
+++ b/public/stylesheets/views/components/fragment/_blog-post-fragment.scss
@@ -45,5 +45,10 @@
             padding-left: 0.5rem;
             white-space: pre-wrap;
         }
+
+        ul, ol {
+            list-style-type: initial;
+            padding-left: 2rem;
+        }
     }
 }
