Globals: Brightened border color

--- a/public/stylesheets/globalSassVars/_colors.scss
+++ b/public/stylesheets/globalSassVars/_colors.scss
@@ -1,13 +1,12 @@
 // some of bg are used as borders; consider renaming
 $bg0: black;
 $bg1: rgb(18, 18, 18);
-$bg2: rgb(36, 36, 36);
-$bg3: rgb(54, 54, 54);
-$bg4: rgb(72, 72, 72);
+$bg2: rgb(54, 54, 54);
+$border: rgb(72, 72, 72);
 $textLight: white;
 $link: #646cff;
 $linkHover: #b22eff;
-$button: $bg3;
-$buttonHover: $bg3;
+$button: $bg2;
+$buttonHover: $bg2;
 $buttonColorful: #b22eff;
 $buttonColorfulHover: #b22eff;
