--- a/public/stylesheets/views/components/toolbar/_footer.scss
+++ b/public/stylesheets/views/components/toolbar/_footer.scss
@@ -6,7 +6,7 @@
     gap: 1rem;
     width: 100%;
     padding: 1rem;
-    border-top: 2px solid colors.$bg2;
+    border-top: 2px solid colors.$border;
 
     &__logo-title {
         display: flex;
