--- a/public/stylesheets/views/pages/_user-profile.scss
+++ b/public/stylesheets/views/pages/_user-profile.scss
@@ -57,7 +57,7 @@
         margin-bottom: 1rem;
         font-size: fSizes.$large;
         font-weight: bold;
-        border-bottom: 2px solid colors.$bg2;
+        border-bottom: 2px solid colors.$border;
         word-break: break-word;
     }
 
