--- a/public/stylesheets/views/components/card/_comment-card.scss
+++ b/public/stylesheets/views/components/card/_comment-card.scss
@@ -9,7 +9,7 @@
     gap: 1rem;
     padding-bottom: 1rem;
     margin-bottom: 1rem;
-    border-bottom: 2px solid colors.$bg2;
+    border-bottom: 2px solid colors.$border;
 
     &__author-date {
         display: flex;
