--- a/public/stylesheets/views/components/card/blogPostCard/_blog-post-card.scss
+++ b/public/stylesheets/views/components/card/blogPostCard/_blog-post-card.scss
@@ -11,13 +11,13 @@
         display: flex;
         width: vars.$width-medium;
         height: vars.$height-medium;
-        border: 2px solid colors.$bg2;
+        border: 2px solid colors.$border;
     }
 
     &__stat-list {
         display: flex;
         padding: 1rem;
-        border-right: 2px solid colors.$bg2;
+        border-right: 2px solid colors.$border;
     }
 
     &__overview {
