--- a/public/stylesheets/views/components/list/_blog-post-list.scss
+++ b/public/stylesheets/views/components/list/_blog-post-list.scss
@@ -5,7 +5,7 @@
 
 .blog-post-item {
     padding: 0.5rem;
-    border-bottom: 2px solid colors.$bg2;
+    border-bottom: 2px solid colors.$border;
 
     &:hover {
         background-color: colors.$button;
