--- a/public/stylesheets/views/components/toolbar/_navbar.scss
+++ b/public/stylesheets/views/components/toolbar/_navbar.scss
@@ -13,7 +13,7 @@
     min-height: layout.$navbar-min-height;
     width: 100%;
     z-index: 100;
-    border-bottom: 2px solid colors.$bg2;
+    border-bottom: 2px solid colors.$border;
     background-color: colors.$bg0;
 
     &__left {
