--- a/public/stylesheets/views/components/toolbar/_sidebar.scss
+++ b/public/stylesheets/views/components/toolbar/_sidebar.scss
@@ -37,7 +37,7 @@
     &__subheading {
         margin-bottom: 1rem;
         font-size: fSizes.$large;
-        border-bottom: 2px solid colors.$bg2;
+        border-bottom: 2px solid colors.$border;
     }
 
     &__subsection {
@@ -47,7 +47,7 @@
     &__profile-overview {
         margin-bottom: 1rem;
         padding-bottom: 1rem;
-        border-bottom: 2px solid colors.$bg2;
+        border-bottom: 2px solid colors.$border;
     }
 
     &__logout {
@@ -56,7 +56,7 @@
         align-items: center;
         margin-top: 1rem;
         padding-top: 1rem;
-        border-top: 2px solid colors.$bg2;
+        border-top: 2px solid colors.$border;
         font-size: fSizes.$large;
     }
 }
@@ -72,8 +72,8 @@
     padding-top: calc(max(layout.$navbar-height, layout.$navbar-min-height) + 1rem);
     z-index: 10;
     background-color: colors.$bg0;
-    border-bottom: 2px solid colors.$bg2;
-    border-right: 2px solid colors.$bg2;
+    border-bottom: 2px solid colors.$border;
+    border-right: 2px solid colors.$border;
     overflow: hidden;
 }
 
@@ -94,7 +94,7 @@
         gap: 1rem;
         width: 100%;
         padding: 1rem;
-        border: 2px solid colors.$bg2;
+        border: 2px solid colors.$border;
     }
 
     &__text {
