--- a/public/stylesheets/views/layouts/_logging.scss
+++ b/public/stylesheets/views/layouts/_logging.scss
@@ -17,7 +17,7 @@
         width: 32rem;
         margin-bottom: 5%;
         padding: 4rem;
-        border: 2px solid colors.$bg2;
+        border: 2px solid colors.$border;
     }
 
     &__heading {
