--- a/public/stylesheets/views/pages/_blog-post-form.scss
+++ b/public/stylesheets/views/pages/_blog-post-form.scss
@@ -56,7 +56,7 @@
         height: 100%;
         width: 100%;
         padding: 1rem;
-        border: 2px solid colors.$bg2;
+        border: 2px solid colors.$border;
     }
 
     &__right > &__body {
@@ -95,7 +95,7 @@
 .blog-post-form {
     height: 100%;
     width: 100%;
-    border-top: 2px solid colors.$bg2;
+    border-top: 2px solid colors.$border;
     padding-top: 1rem;
     padding-bottom: 2rem;
 
