--- a/public/stylesheets/views/pages/_user-blog-posts.scss
+++ b/public/stylesheets/views/pages/_user-blog-posts.scss
@@ -87,12 +87,12 @@
         flex: 1;
         padding: 1rem;
         overflow: auto;
-        border: 2px solid colors.$bg2;
+        border: 2px solid colors.$border;
     }
 
     &__tab-container {
         overflow: auto;
-        border: 2px solid colors.$bg2;
+        border: 2px solid colors.$border;
     }
 
     &__published-container, &__unpublished-container {
