--- a/public/stylesheets/views/components/toolbar/_navbar.scss
+++ b/public/stylesheets/views/components/toolbar/_navbar.scss
@@ -20,6 +20,7 @@
         flex: 1;
         display: flex;
         align-items: center;
+        justify-content: center;
         gap: 1rem;
     }
 
@@ -31,7 +32,7 @@
         flex: 1;
         display: flex;
         align-items: center;
-        justify-content: flex-end;
+        justify-content: center;
         gap: 2rem;
     }
 
@@ -52,8 +53,8 @@
 
 @media (max-width: bp.$bp1) {
     .navbar {
-        &__left {
-            flex: 0;
+        &__left, &__right {
+            justify-content: center;
         }
         
         &__center {
