--- a/public/stylesheets/views/components/toolbar/_navbar.scss
+++ b/public/stylesheets/views/components/toolbar/_navbar.scss
@@ -37,16 +37,12 @@
     }
 
     &.-expanded-searchbar {
-        .navbar__right {
+        .navbar__right, .navbar__left {
             display: none;
         }
 
         .navbar__center {
             display: block;
-        }
-
-        .navbar__search-button {
-            display: none;
         }
     }
 }
