--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -446,7 +446,6 @@ pre[class*=language-] {
   gap: 1rem;
 }
 .icon-element__icon {
-  flex: none;
   height: 2rem;
   width: 2rem;
 }
@@ -456,9 +455,6 @@ pre[class*=language-] {
   -webkit-line-clamp: 2;
   overflow: hidden;
   word-break: break-word;
-}
-.icon-element.-avatar .icon-element__icon > img {
-  border-radius: 50%;
 }
 .icon-element.-column {
   flex-direction: column;
@@ -507,6 +503,13 @@ pre[class*=language-] {
   -webkit-line-clamp: 2;
   overflow: hidden;
   font-size: 1.5rem;
+}
+
+.img-icon-element__icon {
+  flex: none;
+}
+.img-icon-element.-avatar .img-icon-element__icon > img {
+  border-radius: 50%;
 }
 
 .blog-post-item {
